# hibiki

./: .gitignore  AGENTS.md  AUDIOBOOK_SYNC.md  CLAUDE.md  README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-Hant.md  SASAYAKI_PARITY_PLAN.md  SUBTITLE_TO_EPUB_PLAN.md  compute_hash.dart  compute_idx_hash.dart  melos.yaml  pubspec.yaml
.codex-test/tools/: SetFirstEditTextTest.java  adb-ui.ps1  flutter-ui.ps1  hibiki-debug.ps1
.github/workflows/: release.yml
chisa/lib/util/: dictionary_search_widget.dart
ci/: emulator-test.sh
docs/: CODE_QUALITY_REVIEW_2026-05-15.md  api.html  index.html  ttu-fork-notes.md
docs/plans/: 2026-05-16-phase0-monorepo-extraction.md  2026-05-17-phase1-windows-port.md  2026-05-19-phase2-macos-port.md  2026-05-19-phase3-ios-port.md
docs/readme/: README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-Hant.md
docs/reviews/: 2026-05-15-project-review.md  2026-05-17-multiplatform-plan-review.md  2026-05-17-phase1-windows-review.md  2026-05-17-project-review.md  2026-05-18-config-audit.md  2026-05-18-project-review.md  2026-05-18-theme-audit.md  2026-05-18-windows-adaptation-audit.md  2026-05-19-multiplatform-readiness-audit.md
docs/specs/: 2026-05-11-floating-dict-plan.md  2026-05-16-multiplatform-design.md
docs/superpowers/plans/: 2026-05-01-multi-file-audio-import.md  2026-05-05-anki-hoshi-port.md  2026-05-05-anki-silent-export-refactor.md  2026-05-05-collections-favorites-fix.md  2026-05-05-dictionary-popup-fixes.md  2026-05-06-fix-sectionchanged-timing.md  2026-05-07-custom-theme-page-rework.md  2026-05-07-process-text-popup-dictionary.md
docs/superpowers/specs/: 2026-05-07-process-text-popup-dictionary-design.md
hibiki/: APPvs_claude_codehibikitest_screenshotsu.xml  flutter_native_splash.yaml  pubspec.yaml
hibiki/android/: build.gradle  gradle.properties  settings.gradle
hibiki/android/app/: build.gradle  proguard-rules.pro
hibiki/assets/popup/: definition.html  definition.js  dict-media.js  popup.css  popup.html  popup.js  selection.js
hibiki/assets/transforms/: ar.json  de.json  el.json  en.json  eo.json  es.json  eu.json  fr.json  ga.json  grc.json  ja.json  ka.json  ko.json  la.json  sga.json  sq.json  tl.json  yi.json
hibiki/assets/ttu-ebook-reader/: 404.html  auth.html  b.html  index.html  manage.html  service-worker.js  settings.html  statistics.html
hibiki/docs/reviews/: 2026-05-17-project-review.md  2026-05-19-project-review.md
hibiki/integration_test/: app_smoke_test.dart  reader_dictionary_test.dart  regression_test.dart  test_helpers.dart  user_path_test.dart
hibiki/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
hibiki/ios/Runner/: GeneratedPluginRegistrant.m
hibiki/lib/: creator.dart  dictionary.dart  floating_dict_main.dart  language.dart  main.dart  media.dart  pages.dart  popup_main.dart  utils.dart
hibiki/lib/i18n/: strings.g.dart  strings.i18n.json  strings_ar.i18n.json  strings_de.i18n.json  strings_es.i18n.json  strings_fr.i18n.json  strings_id.i18n.json  strings_it.i18n.json  strings_ja.i18n.json  strings_ko.i18n.json  strings_nl.i18n.json  strings_pt-BR.i18n.json  strings_ru.i18n.json  strings_th.i18n.json  strings_tr.i18n.json  (+3 more)
hibiki/web/: index.html
hibiki/windows/: CMakeLists.txt
native/hoshidicts/: CMakeLists.txt  hoshidicts_ffi.cpp
native/hoshidicts/hoshidicts_external/glaze/: CMakeLists.txt
native/hoshidicts/hoshidicts_include/hoshidicts/: importer.hpp  media_path.hpp  platform.hpp  query.hpp
native/hoshidicts/hoshidicts_src/: deinflector.cpp  importer.cpp  query.cpp
native/hoshidicts/hoshidicts_src/hash/: bloom.cpp  bloom.hpp  hash.cpp  hash.hpp
native/hoshidicts/hoshidicts_src/json/: yomitan_parser.cpp
native/hoshidicts/hoshidicts_src/memory/: memory.hpp
native/hoshidicts/hoshidicts_src/text_processor/: text_processor.cpp
native/hoshidicts/hoshidicts_src/zip/: zip.cpp  zip.hpp
scripts/: gh_download_stats.py
tool/: bootstrap.ps1
tools/: convert-yomitan-transforms.mjs
(+782 files in other folders)
